# Umbra

./: .gitignore  analyze.py  build.bat  build.sh  help.bat  help.py  help.sh  run.bat  run.sh  shell.bat  shell.py  todo
examples/: cross_hatching.fs  red_to_green.fs  white_to_red.fs
platform/: BUILD.bazel
src/: main.c
src/core/: app.c  app.h  editor.c  scene.c  scene.h
src/panels/: chain.c  chain.h  console.c  console.h  editor.c  editor.h  explorer.c  explorer.h  viewport.c  viewport.h
src/platform/: clean_windows.h
src/utils/: colors.h  files.c  files.h  structs.c  structs.h
