cc_import(
    name = "win_GLFW_lib",
    static_library = "windows/GLFW/glfw3.lib",
    linkopts = [
        "-DEFAULTLIB:opengl32.lib",
        "-DEFAULTLIB:user32.lib",
        "-DEFAULTLIB:gdi32.lib",
        "-DEFAULTLIB:shell32.lib",
    ],
    visibility = ["//visibility:public"]
)

cc_library(
    name = "win_deps",
    hdrs = glob(["windows/GLFW/**/*.h"]),
    includes = ["windows/GLFW/include"],
    visibility = ["//visibility:public"],
    linkopts = [
        "-DEFAULTLIB:winmm.lib",
    ],
    deps = [
        ":win_GLFW_lib"
    ]
)